--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -1,224 +1,176 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciamento de Usuários</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- CSS Personalizado -->
-    <link rel="stylesheet" href="/static/styles/style.css">
-    <link rel="stylesheet" href="/static/styles/users.css">
-    <link rel="icon" href="/static/img/logo fav icon.png" type="image/png">
-</head>
+{% block title %}Gerenciamento de Usuários{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="/static/styles/users.css">
+{% endblock %}
 
-<body>
-    <div>
-        <button id="toggle-menu" class="d-block d-md-none"
-            style="background-color: transparent; border: none; font-size: 2rem; color: black; ;">
-            ☰
+{% block content %}
+<div class="cadastro mb-4" style="display: none;">
+    <h3>Cadastro de Usuários</h3>
+    <form method="POST" action="/usuarios">
+        <div class="mb-3">
+            <label for="nome" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="nome" name="nome"
+                placeholder="Digite o nome do usuário" required>
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email"
+                placeholder="Digite o email do usuário" required>
+        </div>
+        <div class="mb-3">
+            <label for="telefone" class="form-label">Telefone</label>
+            <input type="text" class="form-control" id="telefone" name="telefone"
+                placeholder="Digite o telefone do usuário" required>
+        </div>
+        <div class="mb-3">
+            <label for="senha" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="senha" name="senha"
+                placeholder="Digite uma senha" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Cadastrar</button>
+        <button type="button" onclick="cancelarCadastro()" class="btn btn-danger">Cancelar</button>
+    </form>
+</div>
+
+<button id="btnCriarUsuario" onclick="exibeCadastro()" class="btn btn-primary">CRIAR USUÁRIO</button>
+
+<hr>
+<form method="GET" action="/usuarios" class="mb-4">
+ 
+    <div class="input-group">
+        <input type="text" class="form-control" name="search_query" placeholder="Pesquisar usuario" >
+        <button class="btn btn-outline-primary" type="submit">
+            <i class="bi bi-search"></i> Pesquisar
         </button>
     </div>
-    <div class="d-flex">
+</form>
 
-        <!-- Menu Lateral -->
-        <div id="menu-container"></div>
-        <!-- Conteúdo Principal -->
-        <div class="container mt-4">
-            <div id="loading">Carregando...</div>
+<!-- Listagem de Usuários -->
 
-            <div class="cadastro mb-4" style="display: none;">
-                <h3>Cadastro de Usuários</h3>
-                <form method="POST" action="/usuarios">
-                    <div class="mb-3">
-                        <label for="nome" class="form-label">Nome</label>
-                        <input type="text" class="form-control" id="nome" name="nome"
-                            placeholder="Digite o nome do usuário" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email"
-                            placeholder="Digite o email do usuário" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="telefone" class="form-label">Telefone</label>
-                        <input type="text" class="form-control" id="telefone" name="telefone"
-                            placeholder="Digite o telefone do usuário" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="senha" class="form-label">Senha</label>
-                        <input type="password" class="form-control" id="senha" name="senha"
-                            placeholder="Digite uma senha" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Cadastrar</button>
-                    <button type="button" onclick="cancelarCadastro()" class="btn btn-danger">Cancelar</button>
-                </form>
-            </div>
+<div class="tabela">
+    {% if usuarios %}
+    <table class="table table-striped">
+        <thead class="table-dark">
+            <tr>
+                <th>Nome</th>
+                <th>Telefone</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for usuario in usuarios %}
+            <tr>
+                <td>{{ usuario.nome_usuario }}</td>
 
-            <button id="btnCriarUsuario" onclick="exibeCadastro()" class="btn btn-primary">CRIAR USUÁRIO</button>
-
-            <hr>
-            <form method="GET" action="/usuarios" class="mb-4">
-             
-                <div class="input-group">
-                    <input type="text" class="form-control" name="search_query" placeholder="Pesquisar usuario" >
-                    <button class="btn btn-outline-primary" type="submit">
-                        <i class="bi bi-search"></i> Pesquisar
+                <td>{{ usuario.telefone }}</td>
+                <td>
+                    <button class="btn btn-sm btn-warning" data-bs-toggle="modal"
+                        data-bs-target="#editModal"
+                        onclick="preencherEdicao('{{ usuario.id }}', '{{ usuario.nome_usuario }}', '{{ usuario.email }}', '{{ usuario.telefone }}')">
+                        Editar
                     </button>
-                </div>
-            </form>
-
-            <!-- Listagem de Usuários -->
-
-            <div class="tabela">
-                {% if usuarios %}
-                <table class="table table-striped">
-                    <thead class="table-dark">
-                        <tr>
-                            <th>Nome</th>
-                            <th>Telefone</th>
-                            <th>Ações</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for usuario in usuarios %}
-                        <tr>
-                            <td>{{ usuario.nome_usuario }}</td>
-
-                            <td>{{ usuario.telefone }}</td>
-                            <td>
-                                <button class="btn btn-sm btn-warning" data-bs-toggle="modal"
-                                    data-bs-target="#editModal"
-                                    onclick="preencherEdicao('{{ usuario.id }}', '{{ usuario.nome_usuario }}', '{{ usuario.email }}', '{{ usuario.telefone }}')">
-                                    Editar
-                                </button>
 
 
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% else %}
+<p class="text-muted">Nenhum usuário cadastrado.</p>
+{% endif %}
+
+<!-- Modal de Edição -->
+<div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editModalLabel">Editar Usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            {% else %}
-            <p class="text-muted">Nenhum usuário cadastrado.</p>
-            {% endif %}
-        </div>
-    </div>
-
-
-    <!-- Modal de Edição -->
-    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editModalLabel">Editar Usuário</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <form method="POST" action="/usuarios/editar">
-                    <div class="modal-body">
-                        <input type="hidden" id="id_usuario" name="id">
-                        <div class="mb-3">
-                            <label for="edit_nome" class="form-label">Nome</label>
-                            <input type="text" class="form-control" id="edit_nome" name="nome" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="edit_email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="edit_email" name="email" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="edit_telefone" class="form-label">Telefone</label>
-                            <input type="text" class="form-control" id="edit_telefone" name="telefone" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="edit_senha" class="form-label">Senha</label>
-                            <input type="password" class="form-control" id="edit_senha" name="senha" required>
-                        </div>
+            <form method="POST" action="/usuarios/editar">
+                <div class="modal-body">
+                    <input type="hidden" id="id_usuario" name="id">
+                    <div class="mb-3">
+                        <label for="edit_nome" class="form-label">Nome</label>
+                        <input type="text" class="form-control" id="edit_nome" name="nome" required>
                     </div>
+                    <div class="mb-3">
+                        <label for="edit_email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="edit_email" name="email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="edit_telefone" class="form-label">Telefone</label>
+                        <input type="text" class="form-control" id="edit_telefone" name="telefone" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="edit_senha" class="form-label">Senha</label>
+                        <input type="password" class="form-control" id="edit_senha" name="senha" required>
+                    </div>
+                </div>
+                
                     
-                        
-                            <button type="button" id="btn-modal" class="btn btn-secondary"
-                                data-bs-dismiss="modal">Cancelar</button>
-                            <button type="button" id="btn-modal" class="btn btn-danger" id="btnExcluir"
-                                onclick="excluirUsuario()">Excluir</button> <!-- Botão de exclusão -->
-                            <button type="submit" id="btn-modal" class="btn btn-primary">Salvar</button>
-                      
-                    
-                </form>
-            </div>
+                        <button type="button" id="btn-modal" class="btn btn-secondary"
+                            data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" id="btn-modal" class="btn btn-danger" id="btnExcluir"
+                            onclick="excluirUsuario()">Excluir</button> <!-- Botão de exclusão -->
+                        <button type="submit" id="btn-modal" class="btn btn-primary">Salvar</button>
+                  
+                
+            </form>
         </div>
     </div>
+</div>
+{% endblock %}
 
-    <!-- Carregar jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+{% block page_scripts %}
+<script>
+function preencherEdicao(id, nome, email, telefone) {
+    document.getElementById('id_usuario').value = id;
+    document.getElementById('edit_nome').value = nome;
+    document.getElementById('edit_email').value = email;
+    document.getElementById('edit_telefone').value = telefone;
+}
 
-    <script src="static/scripts/menu.js"></script>
-    <script>
-        renderMenu('menu-container');
-        function cancelarCadastro() {
-            document.getElementById('formularioCadastro').style.display = 'none';
-            document.getElementById('btnCriarCliente').style.display = 'block';
-        }
-    </script>
+function exibeCadastro() {
+    const cadastro = document.querySelector('.cadastro');
+    const btnCriarUsuario = document.getElementById('btnCriarUsuario');
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
+    if (cadastro.style.display === 'none' || cadastro.style.display === '') {
+        cadastro.style.display = 'block';
+        btnCriarUsuario.style.display = 'none';
+    } else {
+        cadastro.style.display = 'none';
+        btnCriarUsuario.style.display = 'block';
+    }
+}
 
-        function preencherEdicao(id, nome, email, telefone) {
-            document.getElementById('id_usuario').value = id;
-            document.getElementById('edit_nome').value = nome;
-            document.getElementById('edit_email').value = email;
-            document.getElementById('edit_telefone').value = telefone;
+function cancelarCadastro() {
+    document.querySelector('.cadastro').style.display = 'none';
+    document.getElementById('btnCriarUsuario').style.display = 'block';
+}
 
-
-        }
-
-
-        function exibeCadastro() {
-            const cadastro = document.querySelector('.cadastro');
-            const btnCriarUsuario = document.getElementById('btnCriarUsuario');
-
-            if (cadastro.style.display === 'none' || cadastro.style.display === '') {
-                cadastro.style.display = 'block';
-                btnCriarUsuario.style.display = 'none';
-            } else {
-                cadastro.style.display = 'none';
-                btnCriarUsuario.style.display = 'block';
+function excluirUsuario() {
+    const id = $('#id_usuario').val();  // Obtém o ID do usuário a partir do campo oculto no modal
+    if (confirm('Deseja realmente excluir este usuário?')) {
+        $.ajax({
+            url: `/usuarios/excluir/${id}`,  // URL da exclusão
+            method: 'POST',  // Método POST
+            data: { id_usuario: id },  // Dados enviados, caso o backend precise
+            success: function () {
+                alert('Usuário excluído com sucesso.');
+                location.reload();  // Atualiza a página
+            },
+            error: function (xhr, status, error) {
+                alert('Erro ao excluir usuário.');
+                console.log(xhr.responseText);  // Exibe o erro completo no console para depuração
             }
-        }
-
-        function preencherEdicao(id, nome, email, telefone) {
-            document.getElementById('id_usuario').value = id;
-            document.getElementById('edit_nome').value = nome;
-            document.getElementById('edit_email').value = email;
-            document.getElementById('edit_telefone').value = telefone;
-        }
-
-        function excluirUsuario() {
-            const id = $('#id_usuario').val();  // Obtém o ID do usuário a partir do campo oculto no modal
-            if (confirm('Deseja realmente excluir este usuário?')) {
-                $.ajax({
-                    url: `/usuarios/excluir/${id}`,  // URL da exclusão
-                    method: 'POST',  // Método POST
-                    data: { id_usuario: id },  // Dados enviados, caso o backend precise
-                    success: function () {
-                        alert('Usuário excluído com sucesso.');
-                        location.reload();  // Atualiza a página
-                    },
-                    error: function (xhr, status, error) {
-                        alert('Erro ao excluir usuário.');
-                        console.log(xhr.responseText);  // Exibe o erro completo no console para depuração
-                    }
-                });
-            }
-        }
-
-
-    </script>
-</body>
-
-</html>
+        });
+    }
+}
+</script>
+{% endblock %}
