feat: Adiciona suporte a notificações push com integração de VAPID e agendamento de lembretes

--- a/templates/agenda.html
+++ b/templates/agenda.html
@@ -557,6 +557,8 @@ function mostrarMensagem(msg, titulo = 'Mensagem') {
         <span class="cifrao">&#36;</span>
     </a>
 
+    <script src="/static/scripts/push_register.js"></script>
+
 </body>
 
 </html>
